test/errors/array1.qk

#OUTPUT
#Syntax Error: Expected array name.
# -> [13] int[10] = 10
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
    int[10] = 10
    return 0
end

